--- a/db/config/db.conf
+++ b/db/config/db.conf
@@ -6,7 +6,8 @@ const options = {
     reconnectInterval: 500, // Reconnect every 500ms
     poolSize: 10, // Maintain up to 10 socket connections
     // If not connected, return errors immediately rather than waiting for reconnect
-    bufferMaxEntries: 0
+    bufferMaxEntries: 0,
+    useNewUrlParser: true
 };
 
 mongoose.createConnection('mongodb://127.0.0.1:27017/hplan1', options)
