feat: 用户注册后发送邮件

--- a/config/db2.conf
+++ b/config/db2.conf
@@ -1,7 +1,7 @@
 const dbConf = {
-    url: "mongodb://118.89.230.43:27017/test",
-    conn_options: {
-        autoIndex: true, // Do not build indexes
+    url: "mongodb://127.0.0.1:27017/hplan1",
+    n_options: {
+        autoIndex: false, // Do not build indexes
         reconnectTries: 10, // Never stop trying to reconnect
         reconnectInterval: 500, // Reconnect every 500ms
         poolSize: 10, // Maintain up to 10 socket connections
