--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-router": "^7.3.0",
     "koa2-cors": "^2.0.5",
     "mongoose": "^5.0.1",
+    "nodemailer": "^4.6.8",
     "qiniu": "^7.2.1"
   }
 }
