feat: 配置文件集中管理

--- a/config/qiniu.conf
+++ b/config/qiniu.conf
@@ -1,8 +1,8 @@
 {
-    "AccessKey": "Qu1MhLVW2pajQNEdLUaQvshbL7Gc_BjG2TlqPTty",
-    "SecretKey": "rNACt02t9bCfd9XZycX8llhvoQcyW41xUEl1f7bE",
-    "Bucket": "cumthyb",
+    "AccessKey": "bwwuu7Hk4fSvrV-3c9wfRzWpOObRB2wWLmXYj5ag",
+    "SecretKey": "pCk6nZcEpvJIP8Orj-5gGxaJAbVLyTDyZ_693Udo",
+    "Bucket": "hsxz",
     "Port": 9000,
     "UptokenUrl": "uptoken",
-    "Domain": "pe3q7604z.bkt.clouddn.com"
+    "Domain": "pfrdihxd3.bkt.clouddn.com"
 }
