feat: 七牛云token路由

--- a/config/qiniu.conf
+++ b/config/qiniu.conf
@@ -1,4 +1,4 @@
-{
+const conf= {
     "AccessKey": "bwwuu7Hk4fSvrV-3c9wfRzWpOObRB2wWLmXYj5ag",
     "SecretKey": "pCk6nZcEpvJIP8Orj-5gGxaJAbVLyTDyZ_693Udo",
     "Bucket": "hsxz",
@@ -6,3 +6,5 @@
     "UptokenUrl": "uptoken",
     "Domain": "pfrdihxd3.bkt.clouddn.com"
 }
+
+export default conf
