--- a/config/email.conf
+++ b/config/email.conf
@@ -14,7 +14,7 @@ const mailOptions = {
     to: '769807447@qq.com', // list of receivers
     subject: '测试邮件', // Subject line
     text: 'Nodejs之邮件发送', // plaintext body
-    html: '<h2>花生地</h2>'
+    html: "<h2 style='color:red'>花生写作</h2>"
 }
 
 export { serverConf, mailOptions }
