feat: qiniu cofig

--- a/config/qiniu.conf
+++ b/config/qiniu.conf
@@ -4,7 +4,7 @@ const conf= {
     "Bucket": "hsxz",
     "Port": 9000,
     "UptokenUrl": "uptoken",
-    "Domain": "pfrdihxd3.bkt.clouddn.com"
+    "Domain": "pfy8lwjbl.bkt.clouddn.com"
 }
 
 export default conf
