--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-cors": "0.0.16",
-    "koa-jwt": "^3.5.1",
     "koa-router": "^7.3.0",
+    "koa-session": "^5.9.0",
     "koa2-cors": "^2.0.5",
     "mongoose": "^5.0.1",
     "nodemailer": "^4.6.8",
